--- a/web/go-tpl/templates/create.gohtml
+++ b/web/go-tpl/templates/create.gohtml
@@ -32,6 +32,7 @@
     <input type="text" name="title" placeholder="title" required>
     <input type="text" name="author" placeholder="author" required>
     <input type="text" name="price" placeholder="price" required>
+    <input type="text" name="rating" placeholder="rating" required>
     <input type="submit">
 </form>
 
